--- a/views/partials/postsListPanel.handlebars
+++ b/views/partials/postsListPanel.handlebars
@@ -46,16 +46,21 @@
                             <img {{#if this.author_name}}
                             src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png"
                             {{else}}
-                            src="https://avatars.mds.yandex.net/get-znatoki/1368855/2a0000016cc1fb6175fa439b    c6ab108427ae/w480"
+                            src="https://avatars.mds.yandex.net/get-znatoki/1368855/2a0000016cc1fb6175fa439bc6ab108427ae/w480"
                             {{/if}}
                             alt="No avatar" height="100" width="100">
-                            <div class="profileName link colorDarkLink">
-                                {{#if this.author_name}}
-                                    {{this.author_name}}
-                                {{else}}
-                                    Удален
-                                {{/if}}
-                            </div>
+                            {{#eq this.author_id ../user.id}}
+                                <a class="profileName link colorDarkLink" onclick="editPost({{this.id}}, {{this.category_id}}, '{{this.title}}')">Edit</a>
+                                <a class="profileName link colorDarkLink" onclick="deletePost({{this.id}})">Delete</a>
+                            {{else}}
+                                <div class="profileName link colorDarkLink">
+                                    {{#if this.author_name}}
+                                        {{this.author_name}}
+                                    {{else}}
+                                        Удален
+                                    {{/if}}
+                                </div>
+                            {{/eq}}
                         </div>
                         <div class="textAndTime">
                             <a class="answerText link ColorTextDark" href="/post/{{this.id}}">{{this.title}}</a>
@@ -72,7 +77,6 @@
                     </li>
                 {{/each}}
             </ul>
-
             {{>newPost}}
         {{else}}
             <ul id="ulPosts" class="categoryNotChosen">
@@ -85,13 +89,18 @@
                             src="https://avatars.mds.yandex.net/get-znatoki/1368855/2a0000016cc1fb6175fa439b    c6ab108427ae/w480"
                             {{/if}}
                             alt="No avatar" height="100" width="100">
-                            <div class="profileName link colorDarkLink">
-                                {{#if this.author_name}}
-                                    {{this.author_name}}
-                                {{else}}
-                                    Удален
-                                {{/if}}
-                            </div>
+                            {{#eq this.author_id ../user.id}}
+                                <a class="profileName link colorDarkLink" onclick="editPost({{this.id}}, {{this.category_id}}, '{{this.title}}')">Edit</a>
+                                <a class="profileName link colorDarkLink" onclick="deletePost({{this.id}})">Delete</a>
+                            {{else}}
+                                <div class="profileName link colorDarkLink">
+                                    {{#if this.author_name}}
+                                        {{this.author_name}}
+                                    {{else}}
+                                        Удален
+                                    {{/if}}
+                                </div>
+                            {{/eq}}
                         </div>
                         <div class="textAndTime">
                             <a class="answerText link ColorTextDark" href="/post/{{this.id}}">{{this.title}}</a>
@@ -110,6 +119,44 @@
             </ul>
         {{/if}}
     {{else}}
+        <ul id="ulPosts">
+            {{#each posts}}
+                <li class="answer colorSection">
+                    <div class="profile">
+                        <img {{#if this.author_name}}
+                        src="https://postal.ninja/assets/images/48981817022dda35bf548590be816d60-logo-100x100.png"
+                        {{else}}
+                        src="https://avatars.mds.yandex.net/get-znatoki/1368855/2a0000016cc1fb6175fa439bc6ab108427ae/w480"
+                        {{/if}}
+                        alt="No avatar" height="100" width="100">
+                        {{#eq this.author_id ../user.id}}
+                            <a class="profileName link colorDarkLink" onclick="editPost({{this.id}}, {{this.category_id}}, '{{this.title}}')">Edit</a>
+                            <a class="profileName link colorDarkLink" onclick="deletePost({{this.id}})">Delete</a>
+                        {{else}}
+                            <div class="profileName link colorDarkLink">
+                                {{#if this.author_name}}
+                                    {{this.author_name}}
+                                {{else}}
+                                    Удален
+                                {{/if}}
+                            </div>
+                        {{/eq}}
+                    </div>
+                    <div class="textAndTime">
+                        <a class="answerText link ColorTextDark" href="/post/{{this.id}}">{{this.title}}</a>
+                        <div class="timeLast">
+                            {{this.time_since_creation}}
+                        </div>
+                    </div>
+                    <div class="voteField">
+                        <a href="/post/{{this.id}}?{{currentPath}}"><input type="image"
+                                                                           class="replyImage vote colorDarkLink myButton colorSection"
+                                                                           src="/static/images/reply.png" alt="#"/></a>
+                        <div class="voteCounter colorMain colorTextLight">{{this.reply_count}}</div>
+                    </div>
+                </li>
+            {{/each}}
+        </ul>
         <p class="colorTextLight">Войдите или зарегистрируйтесь, чтобы создать пост</p>
     {{/if}}
 </div>
