--- a/views/partials/topbar.handlebars
+++ b/views/partials/topbar.handlebars
@@ -26,7 +26,7 @@
             <div class="colorTextLight">Category</div>
             <input style="margin-top: 5%; font-size: 14pt" type="text" placeholder="Введите категорию" name="category" required>
         </div>
-        <textarea placeholder="Создайте свой пост" name="myPost" id="myAnswer" required></textarea>
+        <textarea placeholder="Создайте свой пост" name="newPost" id="myAnswer" required></textarea>
         <div class="marginButton">
             <input id="postAnswerButton" class="borderTop myButton colorDarkLink colorSection" type="image"
                    src="/static/images/send.png">
