--- a/views/partials/postPanel.handlebars
+++ b/views/partials/postPanel.handlebars
@@ -62,7 +62,7 @@
 
 
 
-                <div class="voteField">
+                <div class="editDeleteField">
                     {{#eq ../user.username this.author_name}}
                             <a class="profileName link colorDarkLink" onclick="editReply({{this.id}}, '{{this.text}}')">Edit</a>
                             <a class="profileName link colorDarkLink" onclick="deleteReply({{this.id}})">Delete</a>
