--- a/views/partials/postPanel.handlebars
+++ b/views/partials/postPanel.handlebars
@@ -37,27 +37,30 @@
                         {{this.time_since_creation}}
                     </div>
                 </div>
-            <div class="voteField">
-                {{#eq ../user.username this.author_name}}
-                    <a class="profileName link colorDarkLink" onclick="editReply({{this.id}}, '{{this.text}}')">Edit</a>
-                    <a class="profileName link colorDarkLink" onclick="deleteReply({{this.id}})">Delete</a>
-                {{else}}
-                    <form action="/vote/{{this.id}}/1" method="post">
-                        <input type="image" class="vote" src="/static/images/like.png" alt="#"/>
-                    </form>
-                    <form action="/vote/{{this.id}}/-1" method="post">
-                        <input type="image" class="vote" src="/static/images/dislike.png" alt="#"/>
-                    </form>
-                    <div class="voteCounter">{{#if this.rating }}
-                        {{#gt this.rating 0 }}
-                            <span style="color: darkgreen   ">{{this.rating}}</span>
+                <div class="voteField">
+                    {{#eq ../user.username this.author_name}}
+                        <a class="profileName link colorDarkLink"
+                           onclick="editReply({{this.id}}, '{{this.text}}')">Edit</a>
+                        <a class="profileName link colorDarkLink" onclick="deleteReply({{this.id}})">Delete</a>
+                    {{else}}
+                        <form action="/vote/{{this.id}}/1?from={{../from}}" method="post">
+                            <input type="image" class="vote" src="/static/images/like.png" alt="#"/>
+                        </form>
+                        <form action="/vote/{{this.id}}/-1?from={{../from}}" method="post">
+                            <input type="image" class="vote" src="/static/images/dislike.png" alt="#"/>
+                        </form>
+                        <div class="voteCounter">{{#if this.rating }}
+                            {{#gt this.rating 0 }}
+                                <span style="color: darkgreen">{{this.rating}}</span>
+                            {{else}}
+                                <span style="color: darkred">{{this.rating}}</span>
+                            {{/gt}}
                         {{else}}
                             0
-                        {{/gt}}
                         {{/if}}
-                    </div>
-                {{/eq}}
-            </div>
+                        </div>
+                    {{/eq}}
+                </div>
             </li>
         {{/each}}
     </ul>
@@ -69,7 +72,8 @@
 </div>
 
 <script>
-    let box1 = document.getElementById('logInForm'), box2 = document.getElementById('signUpForm'), box3 = document.getElementById('postCreation'),
+    let box1 = document.getElementById('logInForm'), box2 = document.getElementById('signUpForm'),
+            box3 = document.getElementById('postCreation'),
             box4 = document.getElementById('replyChange');
     window.onclick = function (event) {
         if (event.target === box1) {
@@ -93,12 +97,12 @@
                 'Content-Type': 'application/json;charset=utf-8'
             },
             body: JSON.stringify(post)
-        }).then( () => {
+        }).then(() => {
             location.reload();
         });
     }
     const editReply = (id, text) => {
-        document.getElementById('replyChange').style.display='block';
+        document.getElementById('replyChange').style.display = 'block';
         document.getElementById('editReply').value = text;
         document.getElementById('sendReply').onsubmit = async (e) => {
             e.preventDefault();
@@ -112,7 +116,7 @@
                     'Content-Type': 'application/json;charset=utf-8'
                 },
                 body: JSON.stringify(post)
-            }).then( () => {
+            }).then(() => {
                 location.reload();
             });
         };
