--- a/views/layouts/postsListViewLayout.handlebars
+++ b/views/layouts/postsListViewLayout.handlebars
@@ -1,11 +1,11 @@
 {{>head}}
 {{>topbar}}
-<div class="container">
+<div class="container" style="">
     <div id="categories" class="colorMain">
         <h2 style="border-bottom-style:solid;" class="colorTextLight">Категории</h2>
         {{>categoriesListPanel}}
     </div>
-
     {{>postsListPanel}}
+
 
 </div>
