--- a/views/layouts/postViewLayout.handlebars
+++ b/views/layouts/postViewLayout.handlebars
@@ -1,6 +1,6 @@
 {{>head}}
 {{>topbar}}
-<div class="container">
+<div class="container relative">
 
     <div id="categories" class="colorMain">
         <h2 style="border-bottom-style:solid;" class="colorTextLight">Категории</h2>
