--- a/views/partials/categoriesListPanel.handlebars
+++ b/views/partials/categoriesListPanel.handlebars
@@ -1,6 +1,6 @@
-<ul class="ulCategories">
+<ul class="ulCategories noUlDecor noUlDefaultPadding">
     {{#each categories}}
-        <li class="liCategories category colorSection colorDarkLink">
+        <li class="category colorSection colorDarkLink">
             <a class="category-link colorTextDark"
                href="/category/{{this.id}}">{{this.name}}</a>
         </li>
