--- a/views/partials/postsListPanel.handlebars
+++ b/views/partials/postsListPanel.handlebars
@@ -36,7 +36,7 @@
             {{/is}}
                  class="sortLink">По последнему ответу <span class="sortLinkArrow"
                                                              id="byLastReplySortLink">&nbsp;</span></a></span></div>
-    <ul id="ulPosts">
+    <ul id="ulPosts" class="noUlDefaultPadding noUlDecor">
         {{#each posts}}
             <li class="answer colorSection">
                 <div class="profile">
