--- a/views/layouts/postsListViewLayout.handlebars
+++ b/views/layouts/postsListViewLayout.handlebars
@@ -1,6 +1,6 @@
 {{>head}}
 {{>topbar}}
-<div class="container" style="">
+<div class="container relative" style="">
     <div id="categories" class="colorMain">
         <h2 style="border-bottom-style:solid;" class="colorTextLight">Категории</h2>
         {{>categoriesListPanel}}
