edit panels moved to layouts

--- a/views/layouts/postViewLayout.handlebars
+++ b/views/layouts/postViewLayout.handlebars
@@ -1,7 +1,15 @@
+{{#not user}}
+    {{>loginPanel}}
+    {{>signupPanel}}
+{{else}}
+    {{>postCreationPanel}}
+{{/not}}
 {{>head}}
 {{>topbar}}
-<div class="container relative">
+{{>message}}
+{{>editReplyPanel}}
 
+<div class="container relative">
     <div id="categories" class="colorMain">
         <h2 style="border-bottom-style:solid;" class="colorTextLight">Категории</h2>
         {{>categoriesListPanel}}
