--- a/views/layouts/postsListViewLayout.handlebars
+++ b/views/layouts/postsListViewLayout.handlebars
@@ -7,6 +7,7 @@
 {{>head}}
 {{>topbar}}
 {{>message}}
+{{>editPostPanel}}
 
 <div class="container relative" style="">
     <div id="categories" class="colorMain">
@@ -14,6 +15,4 @@
         {{>categoriesListPanel}}
     </div>
     {{>postsListPanel}}
-
-
 </div>
